MZ-93 fixed Json.NET reference; added Buy Now to view model and view

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -45,6 +45,9 @@
                         <button class="btn btn-link btn-sm btn-show-more">More<i class="fa fa-caret-down fa-pad-left"></i></button>
                         <button class="btn btn-link btn-sm btn-show-less">Less<i class="fa fa-caret-up fa-pad-left"></i></button>
                     </div>
+                    <div class="buy-now" data-bind="if: buyNowEnabled">
+                        <a class="btn btn-default" href="#">Buy Now</a>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 text-center">
