--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -2,17 +2,11 @@
   font-size: 62.5%;
 }
 body {
-  padding-top: 75px;
-  padding-bottom: 20px;
   font-family: ubuntu;
 }
 body > div {
   font-size: 1.5rem;
   line-height: 2.4rem;
-}
-.body-content {
-  padding-left: 15px;
-  padding-right: 15px;
 }
 h1,
 h2,
@@ -26,6 +20,9 @@ h1 {
 }
 h2 {
   font-size: 2rem;
+}
+h3 {
+  font-size: 1.8rem;
 }
 p,
 ul,
@@ -60,6 +57,36 @@ ol ol {
 }
 .text-warning {
   color: #d9a300;
+}
+.text-yes {
+  color: #008c00;
+}
+.text-no {
+  color: #b94a48;
+}
+body {
+  padding-top: 75px;
+  padding-bottom: 20px;
+}
+.body-content {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.navbar-inverse {
+  background: #132e72;
+}
+.navbar-inverse .navbar-brand,
+.navbar-inverse .navbar-nav > li > a {
+  color: white;
+}
+.navbar-nav .btn-link {
+  border: 0;
+  padding: 15px;
+  color: white !important;
+}
+#page-title {
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid #eee;
 }
 .alert {
   border-radius: 0;
@@ -229,13 +256,399 @@ ol ol {
 .bs-callout-info h4 {
   color: #00468c;
 }
-.text-yes {
-  color: #008c00;
-}
-.text-no {
-  color: #b94a48;
-}
 .panel {
   border-radius: 0;
 }
-/*# sourceMappingURL=site.css.map */
+form section,
+section.form-section {
+  background: #f5f5f5;
+}
+@media screen {
+  form section,
+  section.form-section {
+    padding: 32px;
+  }
+}
+form section:not(:last-child),
+section.form-section:not(:last-child) {
+  margin-bottom: 32px;
+}
+.form-buttons {
+  margin-top: 15px;
+  padding: 32px 0 0 0;
+  background: none;
+  border-top: 1px solid #eee;
+  text-align: right;
+}
+textarea {
+  resize: vertical;
+}
+input[disabled] {
+  cursor: default !important;
+}
+input[type=number].no-spinner::-webkit-inner-spin-button,
+input[type=number].no-spinner::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.form-control {
+  height: auto;
+  min-height: 38px;
+  font-size: 1.5rem;
+  line-height: 2.4rem;
+  box-shadow: none;
+}
+.form-control,
+.btn {
+  border-radius: 0;
+}
+.form-control-sm {
+  max-width: 75px !important;
+}
+@media (max-width: 320px) {
+  .form-control-sm {
+    max-width: 60px !important;
+  }
+}
+.form-control-md {
+  max-width: 125px !important;
+}
+p.form-control-static:after {
+  content: '\0000a0';
+}
+.form-search {
+  margin-bottom: 25px;
+}
+.form-readonly {
+  opacity: 0.5;
+}
+.form-group .form-control {
+  margin-bottom: 5px;
+}
+.input-group .form-control {
+  margin-bottom: 0;
+}
+.form-group .form-control:last-child {
+  margin-bottom: 0;
+}
+.form-group-disabled {
+  opacity: 0.7;
+}
+.form-group-md {
+  max-width: 160px !important;
+}
+.form-inline .form-control:last-child {
+  margin-bottom: 5px;
+}
+.input-group {
+  margin-bottom: 5px;
+}
+.input-group .form-control {
+  margin-bottom: 0 !important;
+}
+.input-group-addon {
+  border-radius: 0;
+  font-size: 1.5rem;
+  line-height: 2.4rem;
+}
+.btn,
+.btn:hover,
+.btn:focus {
+  padding: 10px 24px;
+  outline: none !important;
+  border: none !important;
+  box-shadow: none;
+  text-shadow: none;
+  opacity: 1;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -o-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
+  transition: opacity 0.25s ease-in-out;
+  font-size: 1.6rem;
+  font-weight: normal;
+  letter-spacing: 2px;
+}
+@media (max-width: 320px) {
+  .btn,
+  .btn:hover,
+  .btn:focus {
+    font-size: 1.4rem;
+  }
+}
+.btn:lang(ar),
+.btn:hover:lang(ar),
+.btn:focus:lang(ar) {
+  letter-spacing: normal;
+}
+.btn:hover,
+.btn:hover:hover,
+.btn:focus:hover {
+  opacity: 0.7;
+}
+.btn.submitting,
+.btn:hover.submitting,
+.btn:focus.submitting {
+  text-transform: none !important;
+  font-weight: normal !important;
+  letter-spacing: normal;
+  text-shadow: none;
+  opacity: 0.7;
+}
+.btn-default,
+.btn-default:hover,
+.btn-default:focus {
+  background: #132e72;
+  color: #ffffff;
+}
+.btn-default[disabled] {
+  background: #132e72;
+  opacity: 0.4;
+}
+.btn-sm,
+.btn-sm:hover,
+.btn-sm:focus {
+  padding: 5px 10px;
+  font-size: 1.4rem;
+}
+.btn-link {
+  opacity: 1 !important;
+}
+.btn-link.btn-xs {
+  padding: 0;
+  font-size: 1.2rem;
+}
+.field-validation-error {
+  color: #b94a48;
+}
+.field-validation-valid {
+  display: none;
+}
+input.input-validation-error,
+textarea.input-validation-error {
+  border-color: #b94a48;
+}
+input[type="checkbox"].input-validation-error {
+  border: 0 none;
+}
+.validation-summary-errors {
+  color: #b94a48;
+}
+.validation-summary-valid {
+  display: none;
+}
+.required-label {
+  display: inline-block;
+  margin: -4px 0 0 8px;
+  color: #b94a48;
+  font-size: 1rem;
+  vertical-align: text-top;
+}
+.localized-content > li {
+  margin-bottom: 5px;
+}
+.localized-content > li:last-child {
+  margin-bottom: 0;
+}
+.localized-content .input-group-addon {
+  min-width: 50px;
+}
+:lang(ar) body {
+  font-size: 1.6rem;
+}
+:lang(ar) .nav {
+  padding-right: 0;
+}
+:lang(ar) .navbar-brand {
+  float: right !important;
+}
+:lang(ar) .navbar-right {
+  float: left !important;
+}
+:lang(ar) .navbar-toggle {
+  float: left !important;
+}
+@media (min-width: 768px) {
+  :lang(ar) .navbar-brand {
+    margin-left: 0;
+    margin-right: -15px;
+  }
+  :lang(ar) .navbar-right {
+    margin-right: 0;
+    margin-left: -15px;
+  }
+  :lang(ar) .navbar-header {
+    float: right !important;
+  }
+  :lang(ar) .navbar-nav > li {
+    float: right;
+  }
+  :lang(ar) .navbar-right .dropdown-menu {
+    right: auto;
+    left: 0;
+  }
+}
+:lang(ar) .dropdown-menu {
+  text-align: right;
+}
+:lang(ar) .fa-pad-left {
+  padding-left: 0;
+  padding-right: 4px;
+}
+:lang(ar) .fa-pad-right {
+  padding-left: 4px;
+  padding-right: 0;
+}
+:lang(ar) .fa-fw.fa-pad-right {
+  margin-left: 6px;
+  margin-right: 0;
+}
+:lang(ar) .radio label,
+:lang(ar) .checkbox label {
+  padding-right: 20px;
+  padding-left: 0;
+}
+:lang(ar) .radio input[type="radio"],
+:lang(ar) .radio-inline input[type="radio"],
+:lang(ar) .checkbox input[type="checkbox"],
+:lang(ar) .checkbox-inline input[type="checkbox"] {
+  margin-right: -20px;
+  margin-left: 0;
+}
+:lang(ar) .close {
+  float: left;
+}
+:lang(ar) .input-group-addon {
+  border: 1px solid #ccc;
+}
+:lang(ar) .input-group-addon:first-child {
+  border-left: 0;
+}
+:lang(ar) .input-group-addon:last-child {
+  border-right: 0;
+}
+#home-index #page-title {
+  display: none;
+}
+#home-index #auction-list > li {
+  margin-bottom: 30px;
+  padding: 20px;
+  border: 1px solid #dbdbdb;
+  background-color: white;
+}
+#home-index #auction-list > li:last-child {
+  margin-bottom: 0;
+}
+#home-index #auction-list > li .auction-details .auction-title,
+#home-index #auction-list > li .auction-details .auction-status,
+#home-index #auction-list > li .auction-details .auction-specs,
+#home-index #auction-list > li .auction-details .auction-price {
+  margin-bottom: 20px;
+}
+#home-index #auction-list > li .auction-details h2 {
+  color: #132e72;
+  font-size: 4.8rem;
+}
+#home-index #auction-list > li .auction-details h3 {
+  font-size: 2rem;
+}
+#home-index #auction-list > li .auction-details .product-information {
+  position: relative;
+  max-height: 200px;
+  overflow: hidden;
+}
+#home-index #auction-list > li .auction-details .product-information .more-overlay {
+  display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 20px;
+  background: transparent url('/content/images/transparent-gradient.png') center center repeat-x;
+}
+#home-index #auction-list > li .auction-details .product-information .product-specifications > ul {
+  -moz-column-count: 2;
+  -webkit-column-count: 2;
+  column-count: 2;
+}
+#home-index #auction-list > li .auction-details .btn-show-more,
+#home-index #auction-list > li .auction-details .btn-show-less {
+  display: none;
+  padding: 0;
+  font-size: 1.4rem;
+}
+#home-index #auction-list > li .auction-status {
+  position: relative;
+  display: table;
+  border-collapse: separate;
+  text-align: center;
+  border: 2px solid;
+  width: 100%;
+}
+#home-index #auction-list > li .auction-status .auction-status-loading {
+  padding: 15px;
+  font-size: 1.7rem;
+  font-style: italic;
+}
+#home-index #auction-list > li .auction-status .auction-status-label,
+#home-index #auction-list > li .auction-status .auction-status-details {
+  display: table-cell;
+  padding: 12px;
+  font-size: 1.8rem;
+}
+#home-index #auction-list > li .auction-status .auction-status-label {
+  width: 150px;
+  white-space: nowrap;
+  vertical-align: middle;
+  color: white;
+}
+#home-index #auction-list > li .auction-status .auction-status-label i.fa {
+  font-weight: normal;
+}
+#home-index #auction-list > li .auction-status .auction-status-details {
+  position: relative;
+  float: left;
+  z-index: 2;
+  width: 100%;
+}
+#home-index #auction-list > li .auction-status.status-closed {
+  border-color: #b94a48;
+  background-color: rgba(185, 74, 72, 0.05);
+}
+#home-index #auction-list > li .auction-status.status-closed > .auction-status-label {
+  background-color: #b94a48;
+}
+#home-index #auction-list > li .auction-status.status-live {
+  border-color: #008c00;
+  background-color: rgba(0, 140, 0, 0.05);
+}
+#home-index #auction-list > li .auction-status.status-live > .auction-status-label {
+  background-color: #008c00;
+}
+#home-index #auction-list > li .auction-status.status-upcoming {
+  border-color: #d9a300;
+  background-color: rgba(217, 163, 0, 0.05);
+}
+#home-index #auction-list > li .auction-status.status-upcoming > .auction-status-label {
+  background-color: #d9a300;
+}
+#home-index #auction-list > li .product-image,
+#home-index #auction-list > li .product-image img {
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
+}
+#home-index #auction-list > li .product-images {
+  -moz-column-count: 3;
+  -webkit-column-count: 3;
+  column-count: 3;
+}
+#home-index #auction-list > li .upcoming-date {
+  padding: 25px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 4.2rem;
+  font-weight: bold;
+  color: #fff;
+  background: #132e72;
+}
