--- a/src/Mzayad.Web/Views/Shared/DisplayTemplates/Auction.cshtml
+++ b/src/Mzayad.Web/Views/Shared/DisplayTemplates/Auction.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Mzayad.Core.Formatting
+@using OrangeJetpack.Base.Core.Formatting
 @model Mzayad.Models.Auction
-
-
 
 <div class="row">
     <div class="col-md-8 col-sm-6">
@@ -9,29 +8,30 @@
             <h2 class="auction-title">@Model.Title</h2>
             <div class="product-information">
                 <div class="product-description">
-                    <h3>Description</h3>
+                    <h3>@Global.Description</h3>
                     <div>@Html.Raw(Model.Product.Description)</div>
                 </div>
                 <div class="product-specifications">
-                    <h3>Specifications</h3>
+                    <h3>@Global.Specifications</h3>
                     <ul class="list-unstyled">
                         @foreach (var specification in Model.Product.ProductSpecifications)
                         {
                             <li>@specification.Specification: @specification.Value</li>
-                        }      
+                        }
                     </ul>
                 </div>
-                <div class="auction-price">Retail price: @CurrencyFormatter.Format(Model.RetailPrice)</div>
-                <div class="more-overlay"></div>
+                <div class="auction-price">
+                    @StringFormatter.ObjectFormat(Global.RetailPrice, new { RetailPrice = CurrencyFormatter.Format(Model.RetailPrice) })
+                </div>
             </div>
         </div>
     </div>
     <div class="col-md-4 col-sm-6 text-center">
         <a class="product-image" href="@Model.Product.MainImage().ImageLgUrl" title="@Model.Product.Name"><img class="img-responsive" src="@Model.Product.MainImage().ImageMdUrl" alt="@Model.Product.Name"></a>
         @*<ul class="product-images list-unstyled" data-bind="foreach: images">
-            <li data-bind="if: $index() !== 0">
-                <a class="product-image" data-bind="attr: { href: imageLgUrl, 'data-lightbox-gallery': $parent.auctionId, title: $parent.title }"><img data-bind="attr: { src: imageSmUrl, alt: $parent.title }" alt=""></a>
-            </li>
-        </ul>*@
+                <li data-bind="if: $index() !== 0">
+                    <a class="product-image" data-bind="attr: { href: imageLgUrl, 'data-lightbox-gallery': $parent.auctionId, title: $parent.title }"><img data-bind="attr: { src: imageSmUrl, alt: $parent.title }" alt=""></a>
+                </li>
+            </ul>*@
     </div>
 </div>
