--- a/src/Mzayad.Web/Views/Orders/BuyNow.cshtml
+++ b/src/Mzayad.Web/Views/Orders/BuyNow.cshtml
@@ -9,6 +9,13 @@
 
 @Html.DisplayForModel()
 
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <p class="text-center"><button type="submit" class="btn btn-default">@Global.ContinueToCheckout</button></p>
+}
+
 @section scripts {
     @Scripts.Render("~/js/nivo")
     <script>
