MZ-93 added warming to deploy; updated NuGet packages

--- a/src/Mzayad.Web/Views/Shared/DisplayTemplates/Auction.cshtml
+++ b/src/Mzayad.Web/Views/Shared/DisplayTemplates/Auction.cshtml
@@ -18,7 +18,7 @@
                         <ul class="list-unstyled">
                             @foreach (var specification in Model.Product.ProductSpecifications)
                             {
-                                <li>@specification.Specification: @specification.Value</li>
+                                <li>@specification.Specification.Name: @specification.Value</li>
                             }
                         </ul>
                     </div>
