--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -5,8 +5,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@Html.PageTitle()</title> 
-    <link href="//fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet" type="text/css">
+    <title>@Html.PageTitle()</title>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Ubuntu:400,700" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" />
     <link rel="apple-touch-icon" href="//az723232.vo.msecnd.net/assets/mzayad-favicon-32x32-635593381391686784.png"> @* should be 152x152 *@
     <link rel="icon" href="//az723232.vo.msecnd.net/assets/mzayad-favicon-32x32-635593381391686784.png">@* should be 96x96 *@
     <!--[if IE]><link rel="shortcut icon" href="/favicon.ico"><![endif]--> @* should be 16x16 and 32x32 *@
@@ -24,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="@Url.Action("Index", "Home", new {area = "", language = Html.Language()})" class="navbar-brand"><i class="fa fa-gavel fa-lg"></i> Mzayad</a>
+                <a href="@Url.Action("Index", "Home", new {area = "", language = Html.Language()})" class="navbar-brand">Mzayad</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -48,7 +51,8 @@
         </footer>
     </div>
     @Scripts.Render("~/js/jquery")
+    @Scripts.Render("~/js/bootstrap")
     @Scripts.Render("~/js/site")
-    @RenderSection("scripts", required: false)
+    @RenderSection("scripts", false)
 </body>
 </html>
