MZ-93 added updated favicons

--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -11,10 +11,10 @@ body {
 }
 
 .navbar-inverse {
-    background: @base;
+    background: white;
 }
 
-.navbar-inverse .navbar-brand,
+/*.navbar-inverse .navbar-brand,
 .navbar-inverse .navbar-nav > li > a {
     color: white;
 }
@@ -23,7 +23,7 @@ body {
     border: 0;
     padding: 15px;
     color: white !important;
-}
+}*/
 
 #page-title {
     padding-bottom: 0.5em;
