--- a/src/Mzayad.Web/Content/variables.less
+++ b/src/Mzayad.Web/Content/variables.less
@@ -7,7 +7,7 @@
 @font-size: 1.5rem;
 @line-height: @font-size + 0.9;
 
-@base: #132e72;
+@base: #33ace0;
 @white: #fff;
 @black: black;
 @dark1: #191919;
