--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -65,7 +65,7 @@ ol ol {
   color: #b94a48;
 }
 body {
-  padding-top: 75px;
+  padding-top: 135px;
   padding-bottom: 20px;
 }
 .body-content {
@@ -74,17 +74,64 @@ body {
 }
 .navbar-inverse {
   background: white;
+  border: none;
 }
-/*.navbar-inverse .navbar-brand,
-.navbar-inverse .navbar-nav > li > a {
-    color: white;
+.navbar-inverse,
+.navbar-inverse a,
+.navbar-inverse .btn-link {
+  color: #4d4d4d !important;
 }
-
-.navbar-nav .btn-link {
-    border: 0;
-    padding: 15px;
-    color: white !important;
-}*/
+.navbar-inverse:hover,
+.navbar-inverse a:hover,
+.navbar-inverse .btn-link:hover {
+  color: #9a9a9a !important;
+}
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:focus,
+.navbar-inverse .navbar-nav > .open > a:hover {
+  background-color: #f5f5f5;
+  background-image: none;
+  box-shadow: none;
+}
+.navbar-left {
+  margin-left: -15px;
+}
+.navbar-right {
+  margin-right: -15px;
+}
+.navbar-brand {
+  height: auto;
+  font-size: 3rem;
+  font-weight: bold;
+  line-height: 100%;
+  padding-top: 30px;
+  padding-bottom: 15px;
+}
+.navbar-main > li > a {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  text-shadow: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.navbar-user > li > a,
+.navbar-user .btn-link {
+  text-decoration: none;
+  font-size: 1.4rem !important;
+  text-transform: uppercase;
+  text-shadow: none;
+  padding: 30px 15px 15px 15px !important;
+  border: 0;
+}
+.dropdown-menu > li > a {
+  text-align: center;
+}
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+  color: white !important;
+  background-color: #33ace0;
+  background-image: none;
+}
 #page-title {
   padding-bottom: 0.5em;
   border-bottom: 1px solid #eee;
