--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -12,6 +12,11 @@
     @Styles.Render("~/css/nivo")
 }
 
+@if (!User.Identity.IsAuthenticated || true)
+{
+    <p><img class="img-responsive" src="https://az723232.vo.msecnd.net/assets/hero-movie-635750647415139708.jpg" alt="" /></p>
+}
+
 @if (!Model.Auctions.Any())
 {
     @Html.StatusMessage("There are no auctions available at this time.", StatusMessageType.Warning)
