--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -60,6 +60,7 @@
                 <li>@Html.ActionLink(Global.Home, "Index", "Home", routeValues, null)</li>
                 <li>@Html.ActionLink(Global.About, "About", "Home", routeValues, null)</li>
                 <li>@Html.ActionLink(Global.BuyNow, "BuyNow", "Home", routeValues, null)</li>
+                <li>@Html.ActionLink(Global.BuySubscription, "Index", "Subscriptions", routeValues, null)</li>
                 <li>@Html.ActionLink(Global.ContactUs, "ContactUs", "Home", routeValues, null)</li>
             </ul>
         </nav>
