added missing migration to drop ActivityLog; added User.AvatarUrl

--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -75,7 +75,7 @@
                         <div class="auction-tile-title">@auction.Title</div>
                         <div class="auction-tile-prices">
                             <div class="auction-tile-retail-price">Retail Price: @auction.RetailPrice</div>
-                            <div class="auction-tile-winning-price">Retail Price: @auction.WinningPrice</div>
+                            <div class="auction-tile-winning-price">Retail Price: @auction.WonByAmount</div>
                         </div>
                         <div class="auction-tile-won-by-avater">
 
