MZ-93 created AuctionTile.cshtml; moved CSS into site-auctions.less

--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -700,3 +700,34 @@ input[type="checkbox"].input-validation-error {
   color: #fff;
   background: #33ace0;
 }
+#closed-auctions {
+  margin: 0 -10px 15px -10px;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
+}
+#closed-auctions li {
+  width: 25%;
+  float: left;
+  display: flex;
+  padding: 10px;
+}
+.auction-tile {
+  min-width: 0;
+  border: 1px solid #EBEBEB;
+  text-align: center;
+}
+.auction-tile-image {
+  padding: 10px;
+}
+.auction-tile-details {
+  padding: 10px;
+  border-top: 1px solid #EBEBEB;
+}
+.auction-tile-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
