--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -18,73 +18,12 @@
     <p><img class="img-responsive" src="https://az723232.vo.msecnd.net/assets/hero-movie-635750647415139708.jpg" alt="" /></p>
 }
 
-<style>
-
-    #closed-auctions {
-        margin: 0 -10px 15px -10px;
-        padding: 0;
-        list-style: none;
-        display: flex;
-        flex-wrap: wrap;
-        overflow: hidden;
-    }
-
-    #closed-auctions li {
-        width: 25%;
-        float: left;
-        display: flex;
-        padding: 10px;
-        
-    }
-
-    .auction-tile {
-        min-width: 0;
-        border: 1px solid #EBEBEB;
-        text-align: center;
-    }
-
-    .auction-tile-image {
-        padding: 10px;
-    }
-
-    .auction-tile-details {
-        padding: 10px;
-        border-top: 1px solid #EBEBEB;
-    }
-
-    .auction-tile-title {
-        
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-
-</style>
-
 @if (Model.ClosedAuctions.Any())
 {
     <ul id="closed-auctions">
         @foreach (var auction in Model.ClosedAuctions.Take(4))
         {
-            <li>
-                <div class="auction-tile">
-                    <div class="auction-tile-image">
-                        <img class="img-responsive" src="@auction.MainImage.ImageMdUrl" alt="@auction.Title" />
-                    </div>
-                    <div class="auction-tile-details">
-                        <div class="auction-tile-title">@auction.Title</div>
-                        <div class="auction-tile-prices">
-                            <div class="auction-tile-retail-price">Retail Price: @auction.RetailPrice</div>
-                            <div class="auction-tile-winning-price">Winning Price: @auction.WonByAmount</div>
-                        </div>
-                        <div class="auction-tile-won-by-avater">
-                            <img src="@auction.WonByAvatarUrl" alt="@auction.WonByUserName" width="64" height="64" />
-                            <div class="auction-title-username">@auction.WonByUserName</div>
-                        </div>
-                        <div class="auction-tile-buynow-price">Buy Now: @auction.BuyNowPrice</div>
-                    </div>
-                </div>
-            </li>
+            <li>@Html.DisplayFor(m => auction, "AuctionTile")</li>
         }
     </ul>
 }
