--- a/src/Mzayad.Web/Content/site-kendo.less
+++ b/src/Mzayad.Web/Content/site-kendo.less
@@ -45,7 +45,7 @@
 .k-draghandle.k-state-selected:hover, 
 .k-scheduler .k-scheduler-toolbar .k-state-selected, 
 .k-scheduler .k-today.k-state-selected, .k-marquee-color {
-    color: #ffffff;
+    color: @base;
     background-color: lighten(@base, 50%);
     border-color: lighten(@base, 50%);
 }
