--- a/src/Mzayad.Web/Views/User/EditProfile.cshtml
+++ b/src/Mzayad.Web/Views/User/EditProfile.cshtml
@@ -26,32 +26,25 @@
 
             <section>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.UserProfile.Status, Global.Privacy)
-                    
+                    @Html.LabelFor(m => m.User.ProfileStatus, Global.Privacy)  
                     @foreach (var item in Model.PrivacyList)
                     {
                         <div class="radio">
-                            <label>@Html.RadioButtonFor(i => i.UserProfile.Status, item.Value) @Html.Raw(item.Text)</label>
+                            <label>@Html.RadioButtonFor(i => i.User.ProfileStatus, item.Value) @Html.Raw(item.Text)</label>
                         </div>
                     }
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.UserProfile.ProfileUrl, Global.ProfileURL)
-                    @Html.TextBoxFor(i => i.UserProfile.ProfileUrl, new { @class = "form-control", @readonly = true })
+                    <label>Global.ProfileURL</label>
+                    @Html.TextBoxFor(i => i.User.ProfileUrl, new { @class = "form-control", @readonly = true })
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(m => m.UserProfile.AvatarId, Global.Avatar)
+                    <label>@Global.Avatar</label>
                     <div class="row">
                         @foreach (var item in Model.Avatars)
                         {
-                            if (!Model.UserProfile.AvatarId.HasValue && Model.Avatars.First() == item)
-                            {
-                                <div class="col-md-3" style="margin-bottom: 30px;">
-                                    <img data-id="@item.AvatarId" src="@item.Url" alt="@item.Url" class="img-thumbnail img-responsive normalImg selectedImg" />
-                                </div>
-                            }
-                            else if (Model.UserProfile.AvatarId.HasValue && Model.UserProfile.AvatarId == item.AvatarId)
+                            if (Model.User.AvatarUrl == item.Url)
                             {
                                 <div class="col-md-3" style="margin-bottom: 30px;">
                                     <img data-id="@item.AvatarId" src="@item.Url" alt="@item.Url" class="img-thumbnail img-responsive normalImg selectedImg" />
@@ -66,8 +59,6 @@
 
                         }
                         <input type="hidden" name="selectedAvatar" id="selectedAvatar" />
-                        @Html.HiddenFor(i=>i.UserProfile.UserId)
-                        @Html.HiddenFor(i => i.UserProfile.UserProfileId)
                     </div>
                 </div>
 
