--- a/src/Mzayad.Web/Content/site-auctions.less
+++ b/src/Mzayad.Web/Content/site-auctions.less
@@ -16,11 +16,15 @@
     }
 
     @media (min-width: 560px) {
-        width: 50%;
+        li {
+            width: 50%;
+        }
     }
 
     @media (min-width: 992px) {
-        width: 25%;
+        li {
+            width: 25%;
+        }
     }
 }
 
