--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -722,12 +722,12 @@ input[type="checkbox"].input-validation-error {
   padding: 10px;
 }
 @media (min-width: 560px) {
-  #closed-auctions {
+  #closed-auctions li {
     width: 50%;
   }
 }
 @media (min-width: 992px) {
-  #closed-auctions {
+  #closed-auctions li {
     width: 25%;
   }
 }
